-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 18.0.0 (18.0 branch)
-
None
-
Fedora 42, on Windows WSL2
-
-
09ab2225c (17.0)
On WSL2 with Fedora 42 installed both 16.0.1-2 (current version) as compiled with rpmbuild: qt-creator-17.0.0-1.fc42.x86_64 crash like this when opening a QML file:
[Detaching after vfork from child process 309585]Thread 543 "QmlJSEditor::In" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7ffc64ff96c0 (LWP 309572)] 0x00007ffff59fff18 in QtPrivate::findString(QStringView, long long, QStringView, Qt::CaseSensitivity) () from /lib64/libQt6Core.so.6 Missing rpms, try: dnf --enablerepo='*debug*' install qt6-qt5compat-debuginfo-6.9.1-1.fc42.x86_64 qt6-qtbase-gui-debuginfo-6.9.1-1.fc42.x86_64 qt6-qtbase-debuginfo-6.9.1-1.fc42.x86_64 libstdc++-debuginfo-15.1.1-2.fc42.x86_64 libgcc-debuginfo-15.1.1-2.fc42.x86_64 glibc-debuginfo-2.41-8.fc42.x86_64 qt6-qtdeclarative-debuginfo-6.9.1-2.fc42.x86_64 libicu-debuginfo-76.1-4.fc42.x86_64 libglvnd-egl-debuginfo-1.7.0-7.fc42.x86_64 fontconfig-debuginfo-2.16.0-2.fc42.x86_64 libX11-debuginfo-1.8.11-1.fc42.x86_64 glib2-debuginfo-2.84.3-1.fc42.x86_64 libxkbcommon-debuginfo-1.8.1-1.fc42.x86_64 libglvnd-glx-debuginfo-1.7.0-7.fc42.x86_64 libglvnd-opengl-debuginfo-1.7.0-7.fc42.x86_64 libpng-debuginfo-1.6.44-2.fc42.x86_64 harfbuzz-debuginfo-10.4.0-1.fc42.x86_64 freetype-debuginfo-2.13.3-2.fc42.x86_64 zlib-ng-compat-debuginfo-2.2.4-3.fc42.x86_64 libzstd-debuginfo-1.5.7-1.fc42.x86_64 krb5-libs-debuginfo-1.21.3-6.fc42.x86_64 libbrotli-debuginfo-1.1.0-6.fc42.x86_64 libproxy-debuginfo-0.5.8-2.fc42.x86_64 openssl-libs-debuginfo-3.2.4-3.fc42.x86_64 systemd-libs-debuginfo-257.7-1.fc42.x86_64 double-conversion-debuginfo-3.3.1-1.fc42.x86_64 libb2-debuginfo-0.98.1-13.fc42.x86_64 pcre2-utf16-debuginfo-10.45-1.fc42.x86_64 libglvnd-debuginfo-1.7.0-7.fc42.x86_64 libxml2-debuginfo-2.12.10-1.fc42.x86_64 libxcb-debuginfo-1.17.0-5.fc42.x86_64 pcre2-debuginfo-10.45-1.fc42.x86_64 dbus-libs-debuginfo-1.16.0-3.fc42.x86_64 libXext-debuginfo-1.3.6-3.fc42.x86_64 graphite2-debuginfo-1.3.14-18.fc42.x86_64 bzip2-libs-debuginfo-1.0.8-20.fc42.x86_64 libcom_err-debuginfo-1.47.2-3.fc42.x86_64 keyutils-libs-debuginfo-1.6.3-5.fc42.x86_64 libcap-debuginfo-2.73-2.fc42.x86_64 libgomp-debuginfo-15.1.1-2.fc42.x86_64 xz-libs-debuginfo-5.8.1-2.fc42.x86_64 libXau-debuginfo-1.0.12-2.fc42.x86_64 libselinux-debuginfo-3.8-2.fc42.x86_64 libcurl-debuginfo-8.11.1-5.fc42.x86_64 duktape-debuginfo-2.7.0-9.fc42.x86_64 libffi-debuginfo-3.4.6-5.fc42.x86_64 libnghttp2-debuginfo-1.64.0-3.fc42.x86_64 libidn2-debuginfo-2.3.8-1.fc42.x86_64 libssh-debuginfo-0.11.2-1.fc42.x86_64 libpsl-debuginfo-0.21.5-5.fc42.x86_64 openldap-debuginfo-2.6.9-3.fc42.x86_64 libmount-debuginfo-2.40.4-7.fc42.x86_64 libunistring-debuginfo-1.1-9.fc42.x86_64 libevent-debuginfo-2.1.12-15.fc42.x86_64 cyrus-sasl-lib-debuginfo-2.1.28-30.fc42.x86_64 libblkid-debuginfo-2.40.4-7.fc42.x86_64 libxcrypt-debuginfo-4.4.38-7.fc42.x86_64 qt6-qtwayland-debuginfo-6.9.1-3.fc42.x86_64 libwayland-client-debuginfo-1.23.1-1.fc42.x86_64 libwayland-cursor-debuginfo-1.23.1-1.fc42.x86_64 libwayland-egl-debuginfo-1.23.1-1.fc42.x86_64 xorg-x11-drv-nvidia-libs-debuginfo-575.64-1.fc42.x86_64 egl-wayland-debuginfo-1.1.19-3.fc42.x86_64 libwayland-server-debuginfo-1.23.1-1.fc42.x86_64 libdrm-debuginfo-2.4.125-1.fc42.x86_64 egl-gbm-debuginfo-1.1.2.1-1.fc42.x86_64 mesa-libgbm-debuginfo-25.1.4-2.fc42.x86_64 expat-debuginfo-2.7.1-1.fc42.x86_64 egl-x11-debuginfo-1.0.2-1.fc42.x86_64 libX11-xcb-debuginfo-1.8.11-1.fc42.x86_64 mesa-libEGL-debuginfo-25.1.4-2.fc42.x86_64 mesa-dri-drivers-debuginfo-25.1.4-2.fc42.x86_64 llvm-libs-debuginfo-20.1.7-1.fc42.x86_64 spirv-tools-libs-debuginfo-2025.2-2.fc42.x86_64 lm_sensors-libs-debuginfo-3.6.0-22.fc42.x86_64 libxshmfence-debuginfo-1.3.2-6.fc42.x86_64 elfutils-libelf-debuginfo-0.193-2.fc42.x86_64 libedit-debuginfo-3.1-55.20250104cvs.fc42.x86_64 libpciaccess-debuginfo-0.16-15.fc42.x86_64 ncurses-libs-debuginfo-6.5-5.20250125.fc42.x86_64 clang-libs-debuginfo-20.1.7-1.fc42.x86_64 yaml-cpp-debuginfo-0.8.0-2.fc42.x86_64 qt6-qttools-libs-designercomponents-debuginfo-6.9.1-1.fc42.x86_64 qt6-qttools-libs-designer-debuginfo-6.9.1-1.fc42.x86_64 qt6-qtwebengine-debuginfo-6.9.1-1.fc42.x86_64 qt6-qttools-libs-help-debuginfo-6.9.1-1.fc42.x86_64 litehtml-debuginfo-0.9-4.fc42.x86_64 qt6-qtwebchannel-debuginfo-6.9.1-1.fc42.x86_64 qt6-qtpositioning-debuginfo-6.9.1-1.fc42.x86_64 nss-debuginfo-3.112.0-1.fc42.x86_64 nss-util-debuginfo-3.112.0-1.fc42.x86_64 nspr-debuginfo-4.36.0-9.fc42.x86_64 libjpeg-turbo-debuginfo-3.1.0-2.fc42.x86_64 opus-debuginfo-1.5.2-2.fc42.x86_64 ffmpeg-libs-debuginfo-7.1.1-6.fc42.x86_64 noopenh264-debuginfo-2.5.0-2.fc42.x86_64 libXcomposite-debuginfo-0.4.6-5.fc42.x86_64 libXdamage-debuginfo-1.1.6-5.fc42.x86_64 libXfixes-debuginfo-6.0.1-5.fc42.x86_64 libXrandr-debuginfo-1.5.4-5.fc42.x86_64 libXtst-debuginfo-1.2.5-2.fc42.x86_64 pipewire-libs-debuginfo-1.4.6-1.fc42.x86_64 libwebp-debuginfo-1.5.0-2.fc42.x86_64 re2-debuginfo-20240702-28.fc42.x86_64 alsa-lib-debuginfo-1.2.14-3.fc42.x86_64 snappy-debuginfo-1.2.1-4.fc42.x86_64 minizip-ng-compat-debuginfo-4.0.8-3.fc42.x86_64 libxslt-debuginfo-1.1.43-1.fc42.x86_64 lcms2-debuginfo-2.16-5.fc42.x86_64 openjpeg-debuginfo-2.5.3-6.fc42.x86_64 libtiff-debuginfo-4.7.0-3.fc42.x86_64 libxkbfile-debuginfo-1.1.3-3.fc42.x86_64 gumbo-parser-debuginfo-0.12.1-3.fc42.x86_64 game-music-emu-debuginfo-0.6.3-17.fc42.x86_64 libmodplug-debuginfo-0.8.9.0-27.fc42.x86_64 libopenmpt-debuginfo-0.7.13-3.fc42.x86_64 libchromaprint-debuginfo-1.5.1-24.fc42.x86_64 libbluray-debuginfo-1.3.4-9.fc42.x86_64 libgcrypt-debuginfo-1.11.0-5.fc42.x86_64 gnutls-debuginfo-3.8.9-3.fc42.x86_64 srt-libs-debuginfo-1.5.4-2.fc42.x86_64 libsmbclient-debuginfo-4.22.2-1.fc42.x86_64 zeromq-debuginfo-4.3.5-21.fc42.x86_64 libvpx-debuginfo-1.15.0-3.fc42.x86_64 libaribcaption-debuginfo-1.1.1-2.fc42.x86_64 aribb24-debuginfo-1.0.3^20160216git5e9be27-2.fc42.x86_64 libdav1d-debuginfo-1.5.1-1.fc42.x86_64 opencore-amr-debuginfo-0.1.6-8.fc42.x86_64 librsvg2-debuginfo-2.60.0-1.fc42.x86_64 cairo-debuginfo-1.18.2-3.fc42.x86_64 zvbi-debuginfo-0.2.43-2.fc42.x86_64 libaom-debuginfo-3.12.0-1.fc42.x86_64 codec2-debuginfo-1.2.0-6.fc42.x86_64 gsm-debuginfo-1.0.22-8.fc42.x86_64 ilbc-debuginfo-3.0.4-13.fc42.x86_64 libjxl-debuginfo-0.11.1-2.fc42.x86_64 liblc3-debuginfo-1.1.3-1.fc42.x86_64 lame-libs-debuginfo-3.100-19.fc42.x86_64 rav1e-libs-debuginfo-0.7.1-5.fc42.x86_64 speex-debuginfo-1.2.0-19.fc42.x86_64 svt-av1-libs-debuginfo-2.3.0-1.fc42.x86_64 libtheora-debuginfo-1.1.1-39.fc42.x86_64 twolame-libs-debuginfo-0.4.0-6.fc42.x86_64 vo-amrwbenc-debuginfo-0.1.3-22.fc42.x86_64 libvorbis-debuginfo-1.3.7-12.fc42.x86_64 vvenc-libs-debuginfo-1.13.1-3.fc42.x86_64 x264-libs-debuginfo-0.164-16.20231001git31e19f92.fc42.x86_64 x265-libs-debuginfo-4.1-2.fc42.x86_64 xvidcore-debuginfo-1.3.7-13.fc42.x86_64 libva-debuginfo-2.22.0-4.fc42.x86_64 libvpl-debuginfo-2.15.0-1.fc42.x86_64 libvdpau-debuginfo-1.5-9.fc42.x86_64 OpenCL-ICD-Loader-debuginfo-3.0.6-2.20241023git5907ac1.fc42.x86_64 libXrender-debuginfo-0.9.12-2.fc42.x86_64 libXi-debuginfo-1.8.2-2.fc42.x86_64 abseil-cpp-debuginfo-20240722.1-1.fc42.x86_64 liblerc-debuginfo-4.0.0-8.fc42.x86_64 jbigkit-libs-debuginfo-2.1-31.fc42.x86_64 mpg123-libs-debuginfo-1.32.10-1.fc42.x86_64 libogg-debuginfo-1.3.5-11.fc42.x86_64 libudfread-debuginfo-1.1.2-11.fc42.x86_64 libgpg-error-debuginfo-1.51-2.fc42.x86_64 p11-kit-debuginfo-0.25.5-5.fc42.x86_64 libtasn1-debuginfo-4.20.0-1.fc42.x86_64 nettle-debuginfo-3.10.1-1.fc42.x86_64 gmp-debuginfo-6.3.0-4.fc42.x86_64 samba-client-libs-debuginfo-4.22.2-1.fc42.x86_64 libtevent-debuginfo-0.16.2-2.fc42.x86_64 libtalloc-debuginfo-2.4.3-2.fc42.x86_64 libunwind-debuginfo-1.8.1-2.fc42.x86_64 libsodium-debuginfo-1.0.20-4.fc42.x86_64 openpgm-debuginfo-5.3.128-4.fc42.x86_64 soxr-debuginfo-0.1.3-18.fc42.x86_64 gdk-pixbuf2-debuginfo-2.42.12-10.fc42.x86_64 cairo-gobject-debuginfo-1.18.2-3.fc42.x86_64 pango-debuginfo-1.56.3-1.fc42.x86_64 pixman-debuginfo-0.46.2-1.fc42.x86_64 libvmaf-debuginfo-3.0.0-3.fc42.x86_64 lpcnetfreedv-debuginfo-0.5-8.fc42.x86_64 highway-debuginfo-1.2.0-5.fc42.x86_64 cpuinfo-debuginfo-24.09.26-2.git1e83a2f.fc42.1.x86_64 numactl-libs-debuginfo-2.0.19-2.fc42.x86_64 libtdb-debuginfo-1.4.13-2.fc42.x86_64 libldb-debuginfo-4.22.2-1.fc42.x86_64 fribidi-debuginfo-1.0.16-2.fc42.x86_64 libthai-debuginfo-0.1.29-10.fc42.x86_64 libwbclient-debuginfo-4.22.2-1.fc42.x86_64 jansson-debuginfo-2.14-2.fc42.x86_64 libdatrie-debuginfo-0.2.13-11.fc42.x86_64 qt6-qtsvg-debuginfo-6.9.1-2.fc42.x86_64 qt6-qtpdf-debuginfo-6.9.1-1.fc42.x86_64 sqlite-libs-debuginfo-3.47.2-2.fc42.x86_64 (gdb) (gdb) bt #0 0x00007ffff59fff18 in QtPrivate::findString(QStringView, long long, QStringView, Qt::CaseSensitivity) () at /lib64/libQt6Core.so.6 #1 0x00007ffff5a00ac7 in QtPrivate::findString(QStringView, long long, QLatin1String, Qt::CaseSensitivity) () at /lib64/libQt6Core.so.6 #2 0x00007ffff79775d2 in QStringView::indexOf (this=<synthetic pointer>, s=..., from=0, cs=Qt::CaseSensitive) at /usr/include/qt6/QtCore/qstring.h:92 #3 Utils::FilePath::schemeAndHostLength (path=...) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/utils/filepath.cpp:957 #4 0x00007ffff797d875 in Utils::doCleanPath (input_=<optimized out>) at /usr/include/qt6/QtCore/qstringview.h:119 #5 0x00007ffff79875df in Utils::FilePath::cleanPath (this=0x7ffc647faf68) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/utils/filepath.cpp:2384 #6 0x00007fff684b0ec4 in QmlJS::Snapshot::libraryInfo (this=0x7ffd80016a90, path=<optimized out>) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljsdocument.cpp:616 #7 0x00007fff684f2ffb in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647faef0, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:496 #8 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647fb390, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #9 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647fb830, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #10 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647fbcd0, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #11 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647fc170, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #12 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647fc610, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #13 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647fcab0, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #14 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647fcf50, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 ^C#15 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647fd3f0, targetObject=targetObject@entry=Python Exception <class 'KeyboardInterrupt'>: 0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #16 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647fd890, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #17 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647fdd30, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #18 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647fe1d0, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #19 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647fe670, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #20 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647feb10, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #21 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647fefb0, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #22 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647ff450, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #23 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647ff8f0, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #24 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc647ffd90, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #25 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc64800230, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #26 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc648006d0, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #27 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc64800b70, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #28 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc64801010, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #29 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc648014b0, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #30 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc64801950, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #31 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc64801df0, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #32 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc64802290, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #33 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc64802730, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #34 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc64802bd0, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/qmljs/qmljslink.cpp:541 #35 0x00007fff684f34d7 in QmlJS::LinkPrivate::importLibrary (this=this@entry=0x7ffd80016a90, doc=..., libraryPath=..., import=import@entry=0x7ffc64803070, targetObject=targetObject@entry=0x7ffd80260db0, importPath=..., optional=true) --Type <RET> for more, q to quit, c to continue without paging--q Quit (gdb) up #1 0x00007ffff5a00ac7 in QtPrivate::findString(QStringView, long long, QLatin1String, Qt::CaseSensitivity) () from /lib64/libQt6Core.so.6 (gdb) #2 0x00007ffff79775d2 in QStringView::indexOf (this=<synthetic pointer>, s=..., from=0, cs=Qt::CaseSensitive) at /usr/include/qt6/QtCore/qstring.h:92 92 { return QtPrivate::findString(*this, from, s, cs); } (gdb) p from $1 = 0 (gdb) p s $2 = <optimized out> (gdb) p cs $3 = Qt::CaseSensitive (gdb) up #3 Utils::FilePath::schemeAndHostLength (path=...) at /usr/src/debug/qt-creator-17.0.0-1.fc42.x86_64/src/libs/utils/filepath.cpp:957 957 const int sep = path.indexOf(colonSlashSlash); (gdb) p colonSlashSlash $4 = {m_size = 3, m_data = 0x7ffff7c9cd82 "://"} (gdb) p path $5 = {m_size = 61, m_data = 0x7ffd80260e20 u"/root/git/nck/nckern/build/cmake/hd/bin/QsStyleComponentsTNC7"} (gdb) p path.m_data $6 = (const QStringView::storage_type *) 0x7ffd80260e20 u"/root/git/nck/nckern/build/cmake/hd/bin/QsStyleComponentsTNC7" (gdb)