qmljs: avoid recursively loading the same libraryPath

Change-Id: If3d28cf6da94652f3700c0bfb1713bc15a06337c
Fixes: QTCREATORBUG-33228
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>